--- a/testdata/dao/songs.yml
+++ b/testdata/dao/songs.yml
@@ -5,6 +5,7 @@
   created: 2018-06-12 11:11:11
   genre_id: 1
   provider_id: "mock"
+  token: "path_1"
 
 - id: 2
   album_id: 2
@@ -12,6 +13,7 @@
   title: "title_2"
   created: 2018-06-12 11:11:11
   provider_id: "mock"
+  token: "path_2"
 
 # Gap for missing song #3
 
@@ -22,6 +24,7 @@
   created: 2018-06-12 11:11:11
   genre_id: 1
   provider_id: "mock"
+  token: "path_10"
 
 - id: 14
   album_id: 2
@@ -30,6 +33,7 @@
   created: 2018-06-12 11:11:11
   genre_id: 2
   provider_id: "mock"
+  token: "path_14"
 
 - id: 15
   album_id: 2
@@ -37,6 +41,7 @@
   title: "title_2"
   created: 2018-06-12 11:11:11
   provider_id: "mock"
+  token: "path_15"
 
 # Same as song #2 but with different provider  
 - id: 22
@@ -45,3 +50,4 @@
   title: "title_2"
   created: 2018-06-12 11:11:11
   provider_id: "mock2"
+  token: "path_2"
