--- a/config.yaml
+++ b/config.yaml
@@ -20,3 +20,4 @@ users:
     password: hello2
     email: ned2@blah.com
 beets db: "C:\\Users\\ned.howley\\Downloads\\beetslib.blb"
+access control allow origin: "*"
