--- a/testdata/dao/albums.yml
+++ b/testdata/dao/albums.yml
@@ -3,9 +3,15 @@
   name: "album_1"
   created: 2018-06-12 11:11:11
   year: 1999
+  song_count: 1
+  artist_name: "artist_1"
+  genre_name: "genre_1"
 
 - id: 2
   artist_id: 1
   name: "album_2"
   created: 2018-06-12 11:11:11
   year: 1999
+  song_count: 5
+  artist_name: "artist_1"
+  genre_name: "genre_1"
