--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: go
-
 go:
-    - 1.11.x
-
+  - 1.11.x
 services:
-    - postgresql
-
+  - postgresql
 before_install:
-    - go get github.com/mattn/goveralls
-
+  - openssl aes-256-cbc -K $encrypted_8c047e66c105_key -iv $encrypted_8c047e66c105_iv
+    -in deploy_rsa.enc -out deploy_rsa -d
+  - go get github.com/mattn/goveralls
 before_script:
-    - psql -c "create user sound with password 'sound';" -U postgres
-    - psql -c "create database sound_test owner sound;" -U postgres
-
+  - psql -c "create user sound with password 'sound';" -U postgres
+  - psql -c "create database sound_test owner sound;" -U postgres
 script:
-    - $GOPATH/bin/goveralls -service=travis-ci
+  - "$GOPATH/bin/goveralls -service=travis-ci"
