--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,36 @@
+addons:
+  ssh_known_hosts: hednowley.synology.me:169
+
 language: go
 go:
   - 1.11.x
 services:
   - postgresql
+  - docker
+
+before_deploy:
+  - openssl aes-256-cbc -K $encrypted_8c047e66c105_key -iv $encrypted_8c047e66c105_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
+
 before_install:
-  - openssl aes-256-cbc -K $encrypted_8c047e66c105_key -iv $encrypted_8c047e66c105_iv
-    -in deploy_rsa.enc -out deploy_rsa -d
-  - go get github.com/mattn/goveralls
+#  - go get github.com/mattn/goveralls
+
 before_script:
   - psql -c "create user sound with password 'sound';" -U postgres
   - psql -c "create database sound_test owner sound;" -U postgres
+
 script:
-  - "$GOPATH/bin/goveralls -service=travis-ci"
+  #  - "$GOPATH/bin/goveralls -service=travis-ci"
+  - echo "skipping tests"
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: ./linux_dsm_build.sh &&
+    ssh admin@hednowley.synology.me -p 169 "if ( sudo status sound | grep start ); then sudo stop sound; fi" &&
+    scp -P 169 $TRAVIS_BUILD_DIR/sound  admin@hednowley.synology.me:/volume1/other/soundDir/ &&
+    ssh admin@hednowley.synology.me -p 169 "sudo start sound"
+  on:
+    branch: develop
