--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,57 @@
 addons:
   ssh_known_hosts: hednowley.synology.me:169
 
-language: go
-go:
-  - 1.11.x
 services:
   - postgresql
   - docker
 
+env:
+  - GO111MODULE=on
+
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_8c047e66c105_key -iv $encrypted_8c047e66c105_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - openssl aes-256-cbc -K $encrypted_8c047e66c105_key -iv $encrypted_8c047e66c105_iv -in ../deploy_rsa.enc -out /tmp/deploy_rsa -d
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/deploy_rsa
   - ssh-add /tmp/deploy_rsa
 
-before_install:
-  - go get github.com/mattn/goveralls
+matrix:
+  include:
+    - language: go
+      go:
+        - 1.12.x
 
-before_script:
-  - psql -c "create user sound with password 'sound';" -U postgres
-  - psql -c "create database sound_test owner sound;" -U postgres
+      before_install:
+        - cd go
+        - go get github.com/mattn/goveralls
 
-script:
-  - "$GOPATH/bin/goveralls -service=travis-ci"
+      before_script:
+        - psql -c "create user sound with password 'sound';" -U postgres
+        - psql -c "create database sound_test owner sound;" -U postgres
 
-deploy:
-  provider: script
-  skip_cleanup: true
-  script: ./linux_dsm_build.sh &&
-    ssh admin@hednowley.synology.me -p 169 "if ( sudo status sound | grep start ); then sudo stop sound; fi" &&
-    scp -P 169 $TRAVIS_BUILD_DIR/sound  admin@hednowley.synology.me:/volume1/other/soundDir/ &&
-    ssh admin@hednowley.synology.me -p 169 "sudo start sound"
-  on:
-    branch: develop
+      script:
+        - "$GOPATH/bin/goveralls -service=travis-ci"
+
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script: ./linux_dsm_build.sh &&
+          ssh admin@hednowley.synology.me -p 169 "if ( sudo status sound | grep start ); then sudo stop sound; fi" &&
+          scp -P 169 ./sound  admin@hednowley.synology.me:/volume1/other/soundDir/ &&
+          ssh admin@hednowley.synology.me -p 169 "sudo start sound"
+      on:
+        branch: master
+
+    - language: node_js
+      node_js:
+        - 12
+
+      before_install:
+        - cd elm
+
+      script:
+        - echo "skipping tests"
+
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script: yarn run build:prod && scp -P 169 ./dist/*  admin@hednowley.synology.me:/volume1/other/soundDir/static
