--- a/go/testdata/dao/albums.yml
+++ b/go/testdata/dao/albums.yml
@@ -2,18 +2,26 @@
   artist_id: 1
   name: "album_1"
   created: 2018-06-12 11:11:11
-  year: 1999
-  song_count: 1
-  artist_name: "artist_1"
-  genre_name: "genre_1"
   disambiguator: ""
+  starred: false
 
 - id: 2
   artist_id: 1
-  name: "album_2"
+  name: "album_without_art"
   created: 2018-06-12 11:11:11
-  year: 1999
-  song_count: 5
-  artist_name: "artist_1"
-  genre_name: "genre_1"
   disambiguator: ""
+  starred: false
+
+- id: 3
+  artist_id: 1
+  name: "album_without_genre"
+  created: 2018-06-12 11:11:11
+  disambiguator: ""
+  starred: false
+
+- id: 4
+  artist_id: 1
+  name: "album_without_year"
+  created: 2018-06-12 11:11:11
+  disambiguator: ""
+  starred: false
