--- a/go/testdata/dao/songs.yml
+++ b/go/testdata/dao/songs.yml
@@ -34,7 +34,7 @@
 
 # Same as song #2 but with different provider
 - id: 22
-  artist: "artist_1"
+  artist: "artist_1 ft. Pitbull"
   album_id: 1
   path: "path_2"
   title: "title_2"
@@ -93,7 +93,7 @@
   created: 2018-06-12 11:11:11
   provider_id: "mock"
   token: "path_15"
-  year: 2000
+  year: 1997
   duration: 120
   track: 1
   disc: 0
@@ -109,7 +109,7 @@
   created: 2018-06-12 11:11:11
   provider_id: "mock"
   token: "path_16"
-  year: 2000
+  year: 1964
   duration: 120
   track: 1
   disc: 0
