--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ matrix:
         - go get github.com/mattn/goveralls
 
       before_script:
-        - psql -c "create user sound superuser with password 'sound';" -U postgres
+        - psql -c "create user sound with password 'sound';" -U postgres
+        - psql -c "alter user sound with superuser;" -U postgres
         - psql -c "create database sound_test owner sound;" -U postgres
 
       script:
