--- a/go/testdata/dao/playlists.yml
+++ b/go/testdata/dao/playlists.yml
@@ -3,5 +3,5 @@
   comment: "comment_1"
   public: true
   comment: "comment_1"
-  created: 2018-06-12 11:11:11
-  changed: 2018-06-12 11:11:11
+  created: 2018-06-12T11:11:11Z
+  changed: 2018-06-12T11:11:11Z
