--- a/go/testdata/dao/albums.yml
+++ b/go/testdata/dao/albums.yml
@@ -1,27 +1,27 @@
 - id: 1
   artist_id: 1
   name: "album_1"
-  created: 2018-06-12 11:11:11
+  created: 2018-06-12T11:11:11Z
   disambiguator: ""
   starred: false
 
 - id: 2
   artist_id: 6
   name: "album_without_art"
-  created: 2018-06-12 11:11:11
+  created: 2018-06-12T11:11:11Z
   disambiguator: ""
   starred: false
 
 - id: 3
   artist_id: 1
   name: "album_without_genre"
-  created: 2018-06-12 11:11:11
+  created: 2018-06-12T11:11:11Z
   disambiguator: ""
   starred: false
 
 - id: 4
   artist_id: 1
   name: "album_without_year"
-  created: 2018-06-12 11:11:11
+  created: 2018-06-12T11:11:11Z
   disambiguator: ""
   starred: false
