--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 addons:
   ssh_known_hosts: hednowley.synology.me:169
-  postgresql: "9.3"
+  postgresql: "9.3.22"
+  apt:
+    packages:
+      - postgresql-9.3
+      - postgresql-client-9.3
 
 services:
   - postgresql
@@ -8,6 +12,8 @@ services:
 
 env:
   - GO111MODULE=on
+  global:
+    - PGPORT=5433
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_8c047e66c105_key -iv $encrypted_8c047e66c105_iv -in ../deploy_rsa.enc -out /tmp/deploy_rsa -d
