--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
 
       before_script:
         - psql -c "CREATE USER sound WITH PASSWORD 'sound';" -U postgres
-        - psql -c "ALTER USER sound WITH SUPERUSER; -U postgres
+        - psql -c "ALTER USER sound WITH SUPERUSER;" -U postgres
         - psql -c "CREATE DATABASE sound_test OWNER sound;" -U postgres
 
       script:
