Fix art size config

--- a/go/testdata/config.yaml
+++ b/go/testdata/config.yaml
@@ -4,6 +4,10 @@ port: 3684
 
 art path: "~/temp/art"
 
+art sizes:
+  - 100
+  - 200
+
 db: "host=localhost port=5432 user=postgres password=sound dbname=sound sslmode=disable"
 
 log config: "log-config.xml"
