--- a/go/config.yaml
+++ b/go/config.yaml
@@ -5,7 +5,11 @@ secret: "changeme"
 port: 3684
 
 # A directory where cover art wil be stored.
-art path: "./temp/art"
+art path: "temp/art"
+
+art sizes:
+  - 100
+  - 200
 
 # Connection string to the application's Postgres database.
 db: "host=localhost port=5432 user=sound password=sound dbname=sound_test sslmode=disable"
