--- a/go/config.yaml
+++ b/go/config.yaml
@@ -7,9 +7,16 @@ port: 3684
 # A directory where cover art wil be stored.
 art path: "temp/art"
 
+# Scaled copies of artwork at these sizes will be generated during imports.
+# This can be useful for clients who ask for thumbnail images and servers
+# which are slow at generating them on the fly!
 art sizes:
-  - 100
+  - 120
   - 200
+
+# If true then artwork will be scaled to whatever size a client asks for.
+# If false then the smallest compliant pre-scaled (or original) artwork will be provided.
+resize art: true
 
 # Connection string to the application's Postgres database.
 db: "host=localhost port=5432 user=sound password=sound dbname=sound_test sslmode=disable"
