Update syno upstart

--- a/go/sound.conf
+++ b/go/sound.conf
@@ -1,4 +1,4 @@
-start on started httpd-user
+start on syno.share.ready and syno.network.ready and started pgsql-adapter
 stop on runlevel [06]
 
 chdir /volume1/other/soundDir
